// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders basic icon successfully 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-icon"
  >
    <span
      class="pf-v6-c-icon__content"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </span>
  </span>
</DocumentFragment>
`;

exports[`renders progress icon successfully 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-icon pf-m-in-progress"
  >
    <span
      class="pf-v6-c-icon__content"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </span>
    <span
      class="pf-v6-c-icon__progress"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </span>
  </span>
</DocumentFragment>
`;

exports[`renders without children 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-icon"
  >
    <span
      class="pf-v6-c-icon__content"
    />
  </span>
</DocumentFragment>
`;
